Added CosmosExtension to Create DB on Startup

--- a/src/MarkdownBlog.API/MarkdownBlog.API.csproj
+++ b/src/MarkdownBlog.API/MarkdownBlog.API.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.26.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MarkdownBlog.Infra\MarkdownBlog.Infra.csproj" />
   </ItemGroup>
 
 </Project>
