--- a/src/MarkdownBlog.Tests/MarkdownBlog.Tests.csproj
+++ b/src/MarkdownBlog.Tests/MarkdownBlog.Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarkdownBlog.Infra\MarkdownBlog.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
