--- a/src/MarkdownBlog.Infra/MarkdownBlog.Infra.csproj
+++ b/src/MarkdownBlog.Infra/MarkdownBlog.Infra.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Contracts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarkdownBlog.Domain\MarkdownBlog.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
