--- a/src/mdb.ui/package.json
+++ b/src/mdb.ui/package.json
@@ -30,9 +30,7 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "defaults and supports es6-module"
     ],
     "development": [
       "last 1 chrome version",
