--- a/src/mdb.ui/package.json
+++ b/src/mdb.ui/package.json
@@ -30,7 +30,9 @@
   },
   "browserslist": {
     "production": [
-      "defaults and supports es6-module"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
