--- a/src/MarkdownBlog.API/MarkdownBlog.API.csproj
+++ b/src/MarkdownBlog.API/MarkdownBlog.API.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarkdownBlog.Domain\MarkdownBlog.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
