--- a/src/MarkdownBlog.Tests/MarkdownBlog.Tests.csproj
+++ b/src/MarkdownBlog.Tests/MarkdownBlog.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
-
+    <ImplicitUsings>enable</ImplicitUsings>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MarkdownBlog.Domain\MarkdownBlog.Domain.csproj" />
     <ProjectReference Include="..\MarkdownBlog.Infra\MarkdownBlog.Infra.csproj" />
   </ItemGroup>
 
