--- a/src/MarkdownBlog.API/MarkdownBlog.API.csproj
+++ b/src/MarkdownBlog.API/MarkdownBlog.API.csproj
@@ -7,12 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MarkdownBlog.Domain\MarkdownBlog.Domain.csproj" />
+    <ProjectReference Include="..\MarkdownBlog.Infra\MarkdownBlog.Infra.csproj" />
   </ItemGroup>
 
 </Project>
