Moved blob settings to appsettings #28

--- a/src/MarkdownBlog.API/appsettings.json
+++ b/src/MarkdownBlog.API/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "StorageConnectionString": "<Azure-Connection-String>"
+  "StorageConnectionString": "<Azure-Connection-String>",
+  "BlobContainerName": "bm1",
+  "BlobFileName": "blogMaster.json"
 }
