#48 Implement using react-share

--- a/src/mdb.ui/public/manifest.json
+++ b/src/mdb.ui/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Amit Philips - Coder, Blogger",
   "name": "Create React App Sample",
   "icons": [
     {
