--- a/src/mdb.ui/package.json
+++ b/src/mdb.ui/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-share": "^5.0.3",
     "remark-gfm": "^3.0.1",
     "web-vitals": "^3.3.0"
   },
