--- a/src/mdb.ui/package.json
+++ b/src/mdb.ui/package.json
@@ -11,7 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-markdown": "^8.0.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
