#62 Update for config file

--- a/src/mdb.ui/src/staticwebapp.config.json
+++ b/src/mdb.ui/src/staticwebapp.config.json
@@ -5,5 +5,9 @@
             "/images/*.{png,jpg,gif}",
             "/css/*"
         ]
+    },
+    "globalHeaders": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
     }
 }
