--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 src/MarkdownBlog.API/appsettings.Development.json
+src/mdb.ui/.env
