--- a/src/MarkdownBlog.API/Dockerfile
+++ b/src/MarkdownBlog.API/Dockerfile
@@ -1,26 +1,31 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# This stage is used to build the service project
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["MarkdownBlog.API/MarkdownBlog.API.csproj", "MarkdownBlog.API/"]
 COPY ["MarkdownBlog.Domain/MarkdownBlog.Domain.csproj", "MarkdownBlog.Domain/"]
 COPY ["MarkdownBlog.Infra/MarkdownBlog.Infra.csproj", "MarkdownBlog.Infra/"]
-RUN dotnet restore "./MarkdownBlog.API/./MarkdownBlog.API.csproj"
+RUN dotnet restore "./MarkdownBlog.API/MarkdownBlog.API.csproj"
 COPY . .
 WORKDIR "/src/MarkdownBlog.API"
 RUN dotnet build "./MarkdownBlog.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./MarkdownBlog.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
