--- a/src/MarkdownBlog.API/Dockerfile
+++ b/src/MarkdownBlog.API/Dockerfile
@@ -14,7 +14,7 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["MarkdownBlog.API/MarkdownBlog.API.csproj", "MarkdownBlog.API/"]
 COPY ["MarkdownBlog.Domain/MarkdownBlog.Domain.csproj", "MarkdownBlog.Domain/"]
-COPY ["MarkdownBlog.Infra/MarkdownBlog.Infra.csproj", "MarkdownBlog.Infra/"]
+COPY ["./src/MarkdownBlog.Infra/MarkdownBlog.Infra.csproj", "MarkdownBlog.Infra/"]
 RUN dotnet restore "./MarkdownBlog.API/MarkdownBlog.API.csproj"
 COPY . .
 WORKDIR "/src/MarkdownBlog.API"
